# DisasterStream_Analytics

./: ExposePortNumber.txt  README.md  docker-compose.yaml  dockerfile  requirements.txt  startApp.sh
Nifi_script/: Nifi_as_consumer.xml
dags/: disaster.py  sic_pipeline.py
data/: disaster_data.csv
dbt/: .user.yml  dbt_project.yml  running.txt
dbt/Disaster/: .user.yml  dbt_project.yml  profiles.yml
dbt/Disaster/macros/: generate_dim.sql  generate_schema_name.sql
dbt/Disaster/models/marts/: dim_disaster_type.sql  dim_location.sql  dim_team.sql  fact_disaster.sql  schema.yml
dbt/Disaster/models/staging/: sources.yml  stg_data_disaster.sql
dbt/commerce/: dbt_project.yml  profiles.yml
dbt/commerce/macros/: check_amount.sql  generate_schema_name.sql
dbt/commerce/models/marts/: dim_customer.sql  dim_products.sql  fact_orders.sql
dbt/commerce/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
dbt/macros/: cancellation_code.sql  is_positive.sql  lower_case.sql  new_origin_dest.sql  num_to_text.sql  opeartion_type.sql
dbt/models/marts/: dim_date.sql  dim_destination.sql  dim_flight_status.sql  dim_origin.sql  dim_time.sql  fact_flights.sql  schema.yml
dbt/models/staging/: sources.yml  stg_flight_status.sql
dbt/tests/: amount_validation.sql
my-sdk/: pyproject.toml
sourceConnection/: mysql-source-disaster.json  mysql-source-flights.json
sparkJops/: consumer.py  import_mysql_disaster.py  import_mysql_flights.py  secret_access_keys
